--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <p>Welcome to my first website.</p>
     <h2>Web Security</h2>
     <p id="web-security-question">How would you advise a potential client to secure his/her website from web security attacks? Note: the word count for your answer should not be greater than 250 words</p>
-    <p id="web-security-answer">First of all i would recommand the client to use HTTPS to secure his website from attacks. to be sure the code is secure i would also use a third party solution like node.js to sanitizing HTML code. secure authorization and authentication is also a great way to secure your data, as it's get almost impossible to crack. implementing a automatic user timeout is also a god idea to secure users data.      </p>
+    <p id="web-security-answer">First of all i would recommand the client to use HTTPS to secure his website from attacks. to be sure the code is secure i would also use a third party solution like node.js to sanitizing HTML code. secure authorization and authentication is also a great way to secure your data, as it's get almost impossible to crack. implementing a automatic user timeout is also a god idea to secure users data. i would also tell him to watch out for Phishing, as this is very common these days.      </p>
   </body>
 </html>
 
